# memoriq

./: .gitignore  CHANGELOG.md  QA-REPORT-2026-03-03.md  README.md  UPGRADE-v5.md  config.yaml  diagnose.py  install.py  onboard_helper.py  pyproject.toml  requirements.txt  wizard.py
.github/workflows/: ci.yml
commands/: consolidate.md
commands/cs/: consolidate.md  forget.md  harvest.md  identity.md  memoriqhelp.md  onboard-all.md  onboard.md  recall.md  status.md  tui.md
commands/en/: forget.md  harvest.md  identity.md  memoriqhelp.md  onboard-all.md  onboard.md  recall.md  setup-checklist.md  status.md  tui.md
hooks/: generate_agents_md.py  on_file_change.py  on_pre_compact.py  on_session_end.py  on_session_start.py  register.py
integrations/: __init__.py  bus.py  git_hooks.py  obsidian.py  webhook.py
integrations/vscode/: README.md  package.json
mcp-server/: __init__.py  backfill_embeddings.py  db.py  embedder.py  error_handler.py  health.py  i18n.py  init_db.py  performance.py  progress.py  register_codex.py  server.py  utils.py
mcp-server/code/: __init__.py  indexer.py  resolver.py
mcp-server/indexer/: chunker.py  file_indexer.py
mcp-server/search/: fts_search.py
tests/: conftest.py  test_code_parsers.py  test_code_tools.py  test_db.py  test_health.py  test_memory_delete.py  test_memory_search.py  test_memory_write.py  test_multi_cli.py  test_performance.py  test_secrets_filter.py  test_server.py  test_session_bridge.py  test_session_fallback.py  test_subagent.py
tui/: __init__.py  __main__.py  app.py  data.py  demo.py  styles.tcss  updater.py
(+54 files in other folders)
